--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="img/logo-b.png">
     <title>Casa Blanca Demo</title>
   </head>
   <body>
     <header>
       <nav class="row middle-xs">
-        <div class="col-sm-4 center-xs"><h1>Casa Blanca</h1></div>
+        <div class="col-sm-4 center-xs"><h1>RecibeFlores.com</h1></div>
         <div class=" col-sm-6 row center-sm middle-xs">
           <div class="col-sm">Inicio</div>
           <div class="col-sm">Tienda</div>
@@ -33,7 +34,7 @@
         <article class="banner-text">
           <p class="bigger white">Hasta -20% en</p>
           <h2 class="even-bigger white">ARREGLOS PARA BODAS</h2>
-          <form action="tienda.html"><button  class="btn btn-prom">COMPRAR AHORA</button></form>
+          <form action="#ofertas"><button class="btn btn-prom">COMPRAR AHORA</button></form>
         </article>
       </section>
     </header>
@@ -46,6 +47,7 @@
             <img class="card" src="img/ofer-1.jpg" alt="ofer-1">
             <p class="description row">
               <a href="#" class="col-xs-12">Centro de mesa 1</a>
+              <a href="#" class="col-xs-12">$300</a>
               <a class="btn btn-prom" href="detalle.html">DETALLES</a>
             </p>
           </div>
@@ -55,6 +57,7 @@
             <img class="card" src="img/ofer-2.jpg" alt="ofer-2">
             <p class="description row">
               <a href="#" class="col-xs-12">Centro de mesa 2</a>
+              <a href="#" class="col-xs-12">$300</a>
               <a class="btn btn-prom" href="detalle.html">DETALLES</a>
             </p>
           </div>
@@ -64,30 +67,37 @@
             <img class="card" src="img/ofer-4.jpg" alt="ofer-3">
             <p class="description row">
               <a href="#" class="col-xs-12">Centro de mesa 3</a>
+              <a href="#" class="col-xs-12">$300</a>
               <a class="btn btn-prom" href="detalle.html">DETALLES</a>
             </p>
           </div>
-        </article><article class="col-md-4">
+        </article>
+        <article class="col-md-4">
           <div>
             <img class="card" src="img/ofer-5.jpg" alt="ofer-4">
             <p class="description row">
               <a href="#" class="col-xs-12">Floreros</a>
+              <a href="#" class="col-xs-12">$300</a>
               <a class="btn btn-prom" href="detalle.html">DETALLES</a>
             </p>
           </div>
-        </article><article class="col-md-4">
+        </article>
+        <article class="col-md-4">
           <div>
             <img class="card" src="img/ofer-6.jpg" alt="ofer-5">
             <p class="description row">
               <a href="#" class="col-xs-12">Flores 1</a>
+              <a href="#" class="col-xs-12">$300</a>
               <a class="btn btn-prom" href="detalle.html">DETALLES</a>
             </p>
           </div>
-        </article><article class="col-md-4">
+        </article>
+        <article class="col-md-4">
           <div>
             <img class="card" src="img/ofer-7.jpg" alt="ofer-6">
             <p class="description row">
               <a href="#" class="col-xs-12">Flores 2</a>
+              <a href="#" class="col-xs-12">$300</a>
               <a class="btn btn-prom" href="detalle.html">DETALLES</a>
             </p>
           </div>
