--- a/detalle.html
+++ b/detalle.html
@@ -29,8 +29,10 @@
         </div>
       </nav>
     </header>
+
     <main>
       <section id="bann-title">
+        <img src="img/bg3.jpg" alt="">
         <article>
           <h2 class="even-bigger">Detalle de Producto</h2>
         </article>
