--- a/detalle.html
+++ b/detalle.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="img/logo-b.png">
     <title>Casa Blanca Demo</title>
   </head>
   <body>
@@ -32,9 +33,41 @@
 
     <main>
       <section id="bann-title">
-        <img src="img/bg3.jpg" alt="">
+        <img src="img/bg3.jpg" alt="bg">
         <article>
           <h2 class="even-bigger">Detalle de Producto</h2>
+        </article>
+      </section>
+
+      <section class="detalle row center-xs">
+        <article class="product col-md-10 row">
+          <div class="col-md-6 product-data">
+            <h2 class="even-bigger product-name">
+              Floreros con Letras
+            </h2>
+            <p class="product-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aperiam vitae officiis.
+            </p>
+          </div>
+          <img src="img/ofer-5.jpg"  class="col-md-6 product-img" alt="">
+          <div class="col-xs-12 row product-extra">
+            <div class="col-md-6 row product-props">
+              <div class="col-md-6 product-ofer">Descuento: 20%</div>
+              <div class="col-md-6 product-ofer">Seguro: No</div>
+              <div class="col-md-6 product-ofer">Meses sin intereses: No</div>
+              <div class="col-md-6 product-ofer">Otra Oferta: No</div>
+            </div>
+            <div class="col-md-6 row center-xs relative">
+              <div class="col-md-11 product-price row shadow ">
+                <div class="col-xs-6"><p>Precio</p><h3 class="bigger">$300</h3></div>
+                <div class="col-xs-6"><p>Entrega</p><p class="bigger">5 Horas</p></div>
+                <div class="col-xs-6 padding-top"><p>Disponibles</p><p class="bigger">10</p></div>
+                <div class="col-xs-6 padding-top">
+                  <a class="btn btn-prom" href="detalle.html">Añadir al Carrito</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </article>
       </section>
     </main>
