--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <article class="banner-text">
           <p class="bigger white">Hasta -20% en</p>
           <h2 class="even-bigger white">ARREGLOS PARA BODAS</h2>
-          <form action="#ofertas"><button class="btn btn-prom">COMPRAR AHORA</button></form>
+          <form action="#ofertas"><button class="btn btn-prom btn-anim">COMPRAR AHORA</button></form>
         </article>
       </section>
     </header>
@@ -48,7 +48,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Centro de mesa 1</a>
               <a href="#" class="col-xs-12">$300</a>
-              <a class="btn btn-prom" href="detalle.html">DETALLES</a>
+              <a class="btn btn-prom btn-anim" href="detalle.html">DETALLES</a>
             </p>
           </div>
         </article>
@@ -58,7 +58,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Centro de mesa 2</a>
               <a href="#" class="col-xs-12">$300</a>
-              <a class="btn btn-prom" href="detalle.html">DETALLES</a>
+              <a class="btn btn-prom btn-anim" href="detalle.html">DETALLES</a>
             </p>
           </div>
         </article>
@@ -68,7 +68,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Centro de mesa 3</a>
               <a href="#" class="col-xs-12">$300</a>
-              <a class="btn btn-prom" href="detalle.html">DETALLES</a>
+              <a class="btn btn-prom btn-anim" href="detalle.html">DETALLES</a>
             </p>
           </div>
         </article>
@@ -78,7 +78,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Floreros</a>
               <a href="#" class="col-xs-12">$300</a>
-              <a class="btn btn-prom" href="detalle.html">DETALLES</a>
+              <a class="btn btn-prom btn-anim" href="detalle.html">DETALLES</a>
             </p>
           </div>
         </article>
@@ -88,7 +88,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Flores 1</a>
               <a href="#" class="col-xs-12">$300</a>
-              <a class="btn btn-prom" href="detalle.html">DETALLES</a>
+              <a class="btn btn-prom btn-anim" href="detalle.html">DETALLES</a>
             </p>
           </div>
         </article>
@@ -98,7 +98,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Flores 2</a>
               <a href="#" class="col-xs-12">$300</a>
-              <a class="btn btn-prom" href="detalle.html">DETALLES</a>
+              <a class="btn btn-prom btn-anim" href="detalle.html">DETALLES</a>
             </p>
           </div>
         </article>
