--- a/detalle.html
+++ b/detalle.html
@@ -12,15 +12,15 @@
   <body>
     <header>
       <nav class="row middle-xs">
-        <div class="col-sm-4 center-xs"><h1>Casa Blanca</h1></div>
+        <div class="col-sm-4 center-xs"><h1>OverFlow</h1></div>
         <div class=" col-sm-6 row center-sm middle-xs">
-          <div class="col-sm">Inicio</div>
-          <div class="col-sm">Tienda</div>
-          <div class="col-sm">Sitios</div>
-          <div class="col-sm">Ocasiones</div>
-          <div class="col-sm">Galería</div>
+          <div class="col-sm">Home</div>
+          <div class="col-sm">Courses</div>
+          <div class="col-sm">Pats</div>
+          <div class="col-sm">Something</div>
+          <div class="col-sm">Galery</div>
           <div class="col-sm">Blog</div>
-          <div class="col-sm">Contacto</div>
+          <div class="col-sm">Contact</div>
           <div class="col-sm col-sm-offset-1">
             <a href="#"><i class="material-icons center-sm middle-xs loggin">search</i></a>
           </div>
@@ -33,9 +33,9 @@
 
     <main>
       <section id="bann-title">
-        <img src="img/bg3.jpg" alt="bg">
+        <img src="img/php1.jpg" alt="bg">
         <article>
-          <h2 class="even-bigger">Detalle de Producto</h2>
+          <h2 class="even-bigger">Course Detail</h2>
         </article>
       </section>
 
@@ -43,7 +43,7 @@
         <article class="product col-md-10 row">
           <div class="col-md-6 product-data">
             <h2 class="even-bigger product-name">
-              Floreros con Letras
+              Master in Python
             </h2>
             <p class="product-description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aperiam vitae officiis.
@@ -52,18 +52,18 @@
           <img src="img/ofer-5.jpg"  class="col-md-6 product-img" alt="">
           <div class="col-xs-12 row product-extra">
             <div class="col-md-6 row product-props">
-              <div class="col-md-6 product-ofer">Descuento: 20%</div>
-              <div class="col-md-6 product-ofer">Seguro: No</div>
-              <div class="col-md-6 product-ofer">Meses sin intereses: No</div>
-              <div class="col-md-6 product-ofer">Otra Oferta: No</div>
+              <div class="col-md-6 product-ofer">Lorem: 20%</div>
+              <div class="col-md-6 product-ofer">Ipsum: No</div>
+              <div class="col-md-6 product-ofer">Dolor sit amet: No</div>
+              <div class="col-md-6 product-ofer">Consectetur: No</div>
             </div>
             <div class="col-md-6 row center-xs relative">
               <div class="col-md-11 product-price row shadow ">
-                <div class="col-xs-6"><p>Precio</p><h3 class="bigger">$300</h3></div>
-                <div class="col-xs-6"><p>Entrega</p><p class="bigger">5 Horas</p></div>
-                <div class="col-xs-6 padding-top"><p>Disponibles</p><p class="bigger">10</p></div>
+                <div class="col-xs-6"><p>Pricing</p><h3 class="bigger">$0</h3></div>
+                <div class="col-xs-6"><p>Delivery</p><p class="bigger">Few Minutes</p></div>
+                <div class="col-xs-6 padding-top"><p>Available</p><p class="bigger">Yes</p></div>
                 <div class="col-xs-6 padding-top">
-                  <a class="btn btn-prom" href="detalle.html">Añadir al Carrito</a>
+                  <a class="btn btn-prom" href="detalle.html">Add to the cart</a>
                 </div>
               </div>
             </div>
