--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
   <body>
     <header>
       <nav class="row middle-xs">
-        <div class="col-sm-4 center-xs"><h1>OverFlow</h1></div>
+        <div class="col-sm-4 center-xs"><a href="/"><h1>OverFlow</h1></a></div>
         <div class=" col-sm-6 row center-sm middle-xs">
-          <div class="col-sm">Home</div>
-          <div class="col-sm">Courses</div>
-          <div class="col-sm">Pats</div>
-          <div class="col-sm">Something</div>
-          <div class="col-sm">Galery</div>
-          <div class="col-sm">Blog</div>
-          <div class="col-sm">Contact</div>
+          <div class="col-sm"><a href="/courses">Courses</a></div>
+          <div class="col-sm"><a href="/pats">Pats</a></div>
+          <div class="col-sm"><a href="/galery">Galery</a></div>
+          <div class="col-sm"><a href="/contact">Contact</a></div>
           <div class="col-sm col-sm-offset-1">
             <a href="#"><i class="material-icons center-sm middle-xs loggin">search</i></a>
           </div>
