--- a/detalle.html
+++ b/detalle.html
@@ -60,7 +60,7 @@
                 <div class="col-xs-6"><p>Delivery</p><p class="bigger">Few Minutes</p></div>
                 <div class="col-xs-6 padding-top"><p>Available</p><p class="bigger">Yes</p></div>
                 <div class="col-xs-6 padding-top">
-                  <a class="btn btn-prom" href="detalle.html">Add to the cart</a>
+                  <a class="btn btn-prom" href="https://firebasestorage.googleapis.com/v0/b/tictactoe-86963.appspot.com/o/firebase.zip?alt=media&token=7bb3161b-80fd-43a3-9bde-b7d2ce850ab0">Add to the cart</a>
                 </div>
               </div>
             </div>
