--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <h3 class="subtitle col-sm-12">More Downloaded</h3>
         <article class="col-md-4">
           <div>
-            <img class="card" src="https://cdn-images-1.medium.com/max/400/1*jCNANupl0ECRzF6cOLuWNw.gif" alt="ofer-1">
+            <img class="card" src="img/firebase.png" alt="ofer-1">
             <p class="description row">
-              <a href="#" class="col-xs-12">Responsive Design</a>
-              <a href="#" class="col-xs-12">USD$99</a>
-              <a class="btn btn-prom btn-anim" href="detalle.html">DETAILS</a>
+              <a href="#" class="col-xs-12">Firebase</a>
+              <a href="#" class="col-xs-12">USD$0</a>
+              <a class="btn btn-prom btn-anim" href="detalle_firebase.html">DETAILS</a>
             </p>
           </div>
         </article>
