--- a/detalle_firebase.html
+++ b/detalle_firebase.html
@@ -40,10 +40,10 @@
         <article class="product col-md-10 row">
           <div class="col-md-6 product-data">
             <h2 class="even-bigger product-name">
-              Master in Python
+              Intro a Firebase
             </h2>
             <p class="product-description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aperiam vitae officiis.
+              In this course, you'll learn how to build a introduction app with firebase, the super Google's realtime database tool.
             </p>
           </div>
           <img src="img/firebase.png"  class="col-md-6 product-img" alt="">
