--- a/detalle_firebase.html
+++ b/detalle_firebase.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="img/logo-b.png">
-    <title>Casa Blanca Demo</title>
+    <title>OverFlow</title>
   </head>
   <body>
     <header>
