--- a/detalle_firebase.html
+++ b/detalle_firebase.html
@@ -15,8 +15,8 @@
         <div class="col-sm-4 center-xs"><a href="/"><h1>OverFlow</h1></a></div>
         <div class=" col-sm-6 row center-sm middle-xs">
           <div class="col-sm"><a href="/overflow/courses">Courses</a></div>
-          <div class="col-sm"><a href="/overflow/pats">Pats</a></div>
-          <div class="col-sm"><a href="/overflow/galery">Galery</a></div>
+          <div class="col-sm"><a href="/overflow/paths">Paths</a></div>
+          <div class="col-sm"><a href="/overflow/galery">Gallery</a></div>
           <div class="col-sm"><a href="/overflow/contact">Contact</a></div>
           <div class="col-sm col-sm-offset-1">
             <a href="#"><i class="material-icons center-sm middle-xs loggin">search</i></a>
