--- a/galery/index.html
+++ b/galery/index.html
@@ -15,7 +15,7 @@
         <div class="col-sm-4 center-xs"><a href="/"><h1>OverFlow</h1></a></div>
         <div class=" col-sm-6 row center-sm middle-xs">
           <div class="col-sm"><a href="/overflow/courses">Courses</a></div>
-          <div class="col-sm"><a href="/overflow/pats">Pats</a></div>
+          <div class="col-sm"><a href="/overflow/paths">Paths</a></div>
           <div class="col-sm"><a href="/overflow/galery">Gallery</a></div>
           <div class="col-sm"><a href="/overflow/contact">Contact</a></div>
           <div class="col-sm col-sm-offset-1">
