--- a/paths/index.html
+++ b/paths/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="shortcut icon" href="/img/logo-b.png">
+    <link rel="stylesheet" href="/overflow/css/main.css">
+    <link rel="shortcut icon" href="/overflow/img/logo-b.png">
     <title>OverFlow</title>
   </head>
   <body>
@@ -30,7 +30,7 @@
 
     <main>
       <section id="bann-title">
-        <img src="/img/php1.jpg" alt="bg">
+        <img src="/overflow/img/php1.jpg" alt="bg">
         <article>
           <h2 class="even-bigger">Paths</h2>
         </article>
@@ -39,7 +39,7 @@
       <section class="detalle row center-xs">
         <article class="col-md-4">
           <div>
-            <img class="card" src="/img/firebase.png" alt="ofer-1">
+            <img class="card" src="/overflow/img/firebase.png" alt="ofer-1">
             <p class="description row">
               <a href="#" class="col-xs-12">Frontend</a>
               <a class="btn btn-prom btn-anim" href="detalle_firebase.html">MORE</a>
@@ -48,7 +48,7 @@
         </article>
         <article class="col-md-4">
           <div>
-            <img class="card" src="/img/php1.jpg" alt="ofer-3">
+            <img class="card" src="/overflow/img/php1.jpg" alt="ofer-3">
             <p class="description row">
               <a href="#" class="col-xs-12">Articles</a>
               <a class="btn btn-prom btn-anim" href="detalle.html">MORE</a>
