--- a/detalle_firebase.html
+++ b/detalle_firebase.html
@@ -12,18 +12,12 @@
   <body>
     <header>
       <nav class="row middle-xs">
-        <div class="col-sm-4 center-xs"><a href="/"><h1>OverFlow</h1></a></div>
+        <div class="col-sm-4 center-xs"><a href="/overflow"><h1>OverFlow</h1></a></div>
         <div class=" col-sm-6 row center-sm middle-xs">
           <div class="col-sm"><a href="/overflow/courses">Courses</a></div>
           <div class="col-sm"><a href="/overflow/paths">Paths</a></div>
           <div class="col-sm"><a href="/overflow/galery">Gallery</a></div>
           <div class="col-sm"><a href="/overflow/contact">Contact</a></div>
-          <div class="col-sm col-sm-offset-1">
-            <a href="#"><i class="material-icons center-sm middle-xs loggin">search</i></a>
-          </div>
-          <div class="col-sm">
-            <a href="#"><i class="material-icons center-sm middle-xs sc">shopping_cart</i></a>
-          </div>
         </div>
       </nav>
     </header>
