many bugs solved

--- a/detalle_firebase.html
+++ b/detalle_firebase.html
@@ -40,7 +40,7 @@
               In this course, you'll learn how to build a introduction app with firebase, the super Google's realtime database tool.
             </p>
           </div>
-          <img src="img/firebase.png"  class="col-md-6 product-img" alt="">
+          <img src="/img/firebase.png"  class="col-md-6 product-img" alt="">
           <div class="col-xs-12 row product-extra">
             <div class="col-md-6 row product-props">
               <div class="col-md-6 product-ofer">Author: Hector BlisS</div>
@@ -50,7 +50,7 @@
             </div>
             <div class="col-md-6 row center-xs relative">
               <div class="col-md-11 product-price row shadow ">
-                <div class="col-xs-6"><p>Cost</p><h3 class="bigger">$0</h3></div>
+                <div class="col-xs-6"><p>Cost</p><h3 class="bigger">Free</h3></div>
                 <div class="col-xs-6"><p>Delivery</p><p class="bigger">Few Minutes</p></div>
                 <div class="col-xs-6 padding-top"><p>Available</p><p class="bigger">Yes</p></div>
                 <div class="col-xs-6 padding-top">
