--- a/detalle_firebase.html
+++ b/detalle_firebase.html
@@ -39,7 +39,7 @@
               In this course, you'll learn how to build a introduction app with firebase, the super Google's realtime database tool.
             </p>
           </div>
-          <img src="/img/firebase.png"  class="col-md-6 product-img" alt="">
+          <img src="/overflow/img/firebase.png"  class="col-md-6 product-img" alt="">
           <div class="col-xs-12 row product-extra">
             <div class="col-md-6 row product-props">
               <div class="col-md-6 product-ofer">Author: Hector BlisS</div>
