--- a/detalle_php.html
+++ b/detalle_php.html
@@ -39,7 +39,7 @@
               Nowadays is an outdated programming langage and here you may find some reasons why it is not used nowadays.
             </p>
           </div>
-          <img src="/img/php1.jpg"  class="col-md-6 product-img" alt="">
+          <img src="/overflow/img/php1.jpg"  class="col-md-6 product-img" alt="">
           <div class="col-xs-12 row product-extra">
             <div class="col-md-6 row product-props">
               <div class="col-md-6 product-ofer">Author: Jesus Morales</div>
