--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Why not to use PHP</a>
               <a href="#" class="col-xs-12">USD$50</a>
-              <a class="btn btn-prom btn-anim" href="detalle.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="detalle_php.html">DETAILS</a>
             </p>
           </div>
         </article>
@@ -59,7 +59,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Ruby on Rails</a>
               <a href="#" class="col-xs-12">USD$100</a>
-              <a class="btn btn-prom btn-anim" href="detalle.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="detalle_ruby.html">DETAILS</a>
             </p>
           </div>
         </article>
