--- a/courses/index.html
+++ b/courses/index.html
@@ -25,7 +25,7 @@
       <section id="bann-title">
         <img src="/overflow/img/php1.jpg" alt="bg">
         <article>
-          <h2 class="even-bigger">Paths</h2>
+          <h2 class="even-bigger">Courses</h2>
         </article>
       </section>
 
