--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
       <section class="banner">
         <article id="shadow"></article>
         <article class="banner-text">
-          <p class="bigger white">-20% at</p>
-          <h2 class="even-bigger white">PYTHON COURSES</h2>
-          <form action="#ofertas"><button class="btn btn-prom btn-anim">BUY NOW</button></form>
+          <h2 class="even-bigger white">Development Courses</h2>
         </article>
       </section>
     </header>
