--- a/contact/index.html
+++ b/contact/index.html
@@ -34,6 +34,11 @@
           <div>
             <img class="card" src="https://scontent.fntr4-1.fna.fbcdn.net/v/t1.0-9/11264873_974203885937491_4777370638904079719_n.jpg?_nc_cat=0&_nc_eui2=v1%3AAeE6qKk-B-9d5vaumUoGiMibBgGCofN3sZwdrkfvRJHx4B3u7yqZqRjxg9jJtnBZeOdhT17vxzZX6N9ePuintqVQfeUZyNnlIQwrP2cEEd2Pxw&oh=5cf8f667fe1c16e5340d456086df3635&oe=5B952790" alt="ofer-1">
 
+            <p class="description row">
+              <a href="#" class="col-xs-12">Firebase</a>
+              <a href="#" class="col-xs-12">Free</a>
+              <a class="btn btn-prom btn-anim" href="detalle_firebase.html">DETAILS</a>
+            </p>
           </div>
         </article>
         <article class="col-md-4">
