--- a/paths/index.html
+++ b/paths/index.html
@@ -41,7 +41,7 @@
         </article>
         <article class="col-md-4">
           <div>
-            <img class="card" src="/overflow/img/art.jpg" alt="ofer-3">
+            <img class="card" src="/overflow/img/art.png" alt="ofer-3">
             <p class="description row">
               <a href="#" class="col-xs-12">Articles</a>
               <a class="btn btn-prom btn-anim" href="detalle.html">MORE</a>
@@ -51,7 +51,7 @@
 
         <article class="col-md-4">
           <div>
-            <img class="card" src="/overflow/img/back.jpg" alt="ofer-6">
+            <img class="card" src="/overflow/img/back.png" alt="ofer-6">
             <p class="description row">
               <a href="#" class="col-xs-12">Backend</a>
               <a class="btn btn-prom btn-anim" href="detalle.html">MORE</a>
