--- a/contact/index.html
+++ b/contact/index.html
@@ -35,8 +35,8 @@
             <img class="card" src="https://scontent.fntr4-1.fna.fbcdn.net/v/t1.0-9/11264873_974203885937491_4777370638904079719_n.jpg?_nc_cat=0&_nc_eui2=v1%3AAeE6qKk-B-9d5vaumUoGiMibBgGCofN3sZwdrkfvRJHx4B3u7yqZqRjxg9jJtnBZeOdhT17vxzZX6N9ePuintqVQfeUZyNnlIQwrP2cEEd2Pxw&oh=5cf8f667fe1c16e5340d456086df3635&oe=5B952790" alt="ofer-1">
 
             <p class="description row">
-              <a class="btn btn-prom btn-anim" href="https://www.facebook.com/TopiHdz">Facebook</a>
-              <a class="btn btn-prom btn-anim" href="https://twitter.com/Topihernandez">Twitter</a>
+              <a class="btn btn-prom btn-anim" href="https://www.facebook.com/TopiHdz">Facebook</a><br>
+              <a class="btn btn-prom btn-anim" href="https://twitter.com/Topihernandez">Twitter</a><br>
               <a class="btn btn-prom btn-anim" href="https://github.com/Topi99">Github</a>
             </p>
           </div>
