--- a/courses/index.html
+++ b/courses/index.html
@@ -36,7 +36,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Firebase</a>
               <a href="#" class="col-xs-12">Free</a>
-              <a class="btn btn-prom btn-anim" href="detalle_firebase.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/detalle_firebase.html">DETAILS</a>
             </p>
           </div>
         </article>
@@ -44,9 +44,20 @@
           <div>
             <img class="card" src="/overflow/img/php1.jpg" alt="ofer-3">
             <p class="description row">
-              <a href="#" class="col-xs-12">Why not to use PHP</a>
+              <a href="#" class="col-xs-12">The importance of Java</a>
               <a href="#" class="col-xs-12">Free</a>
-              <a class="btn btn-prom btn-anim" href="detalle_php.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/detalle_java.html">DETAILS</a>
+            </p>
+          </div>
+        </article>
+
+        <article class="col-md-4">
+          <div>
+            <img class="card" src="/overflow/img/php1.jpg" alt="ofer-3">
+            <p class="description row">
+              <a href="#" class="col-xs-12">What is Python?</a>
+              <a href="#" class="col-xs-12">Free</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/detalle_python.html">DETAILS</a>
             </p>
           </div>
         </article>
@@ -57,7 +68,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Ruby on Rails</a>
               <a href="#" class="col-xs-12">Free</a>
-              <a class="btn btn-prom btn-anim" href="detalle_ruby.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/detalle_ruby.html">DETAILS</a>
             </p>
           </div>
         </article>
