--- a/detalle_python.html
+++ b/detalle_python.html
@@ -33,7 +33,7 @@
         <article class="product col-md-10 row">
           <div class="col-md-6 product-data">
             <h2 class="even-bigger product-name">
-              Whay is Python?.
+              What is Python?.
             </h2>
             <p class="product-description">
               Text Text Text.
