--- a/contact/index.html
+++ b/contact/index.html
@@ -68,7 +68,7 @@
 
         <article class="col-md-4">
           <div>
-            <img class="card" src="/overflow/docs.jpg" alt="ofer-6">
+            <img class="card" src="/overflow/img/docs.jpg" alt="ofer-6">
             <p class="description row">
               <a class="btn btn-prom btn-anim" href="https://github.com/Topi99/overflow/tree/gh-pages/docs">Documentation</a>
             </p>
