--- a/detalle_firebase.html
+++ b/detalle_firebase.html
@@ -36,7 +36,11 @@
               Intro a Firebase
             </h2>
             <p class="product-description">
-              In this course, you'll learn how to build a introduction app with firebase, the super Google's realtime database tool.
+              Firebase is platform which allow to build web and mobile applications without server-side programming language. You can store users’ data on its real-time database which sync data among users’ data in no time.
+
+It stores and synchronizes data between users and devices in real time through a NoSQL database hosted in the cloud. The data has been synchronized with other devices connected in milliseconds and they remain available if the application loses the connection to the network, which offers a high-quality user experience regardless of the state of the connectivity.
+
+In this course, you'll learn how to build an introduction app with firebase, the super Google's real-time database tool.
             </p>
           </div>
           <img src="/overflow/img/firebase.png"  class="col-md-6 product-img" alt="">
