--- a/detalle_java.html
+++ b/detalle_java.html
@@ -36,7 +36,12 @@
               The importance of Java.
             </h2>
             <p class="product-description">
-              Text Text Text.
+              Nowadays, Java is one of the most famous programming languages and is widely used even more than C++, Python, C#, PHP and JavaScript.
+
+It is well known that Java is a general-purpose programming language, so it is not surprise that developers prefers to use Java to develop GUI applications; on the same way, another common use of Java is in the development of mobile apps and games for Android.
+Nevertheless, as there are great positive characteristics that makes Java unique, there are also some downsides regarding this programming language.
+
+Download the article to get a more detailed view about the characteristics and the downsides about this programming language.
             </p>
           </div>
           <img src="/overflow/img/php1.jpg"  class="col-md-6 product-img" alt="">
