--- a/detalle_python.html
+++ b/detalle_python.html
@@ -36,7 +36,12 @@
               What is Python?.
             </h2>
             <p class="product-description">
-              Text Text Text.
+              Python is known to be a general-purpose programming language, meaning that you are able to develop almost anything what you can imagine using the right libraries or tools.
+
+This programming language was developed to be a more concise straightforward, and easy-to-understand alternative to other major languages such as C, Java and Perl. Python programming is designed to be highly standardized, with a clear protocol for any task and little to no need for coming up with elaborate patchwork solutions to get something done.
+It's one of the world's most popular programming languages and is commonly used by major companies for web development purposes. Nevertheless, Python can be found in commercial games, business software, educational applications, animation systems and many other different types of software.
+
+Download the article to get a more detailed information about the characteristics and the downsides about this programming language.
             </p>
           </div>
           <img src="/overflow/img/php1.jpg"  class="col-md-6 product-img" alt="">
@@ -44,7 +49,7 @@
             <div class="col-md-6 row product-props">
               <div class="col-md-6 product-ofer">Author: Jesús Morales</div>
               <div class="col-md-6 product-ofer">Company: OverFlowers</div>
-              <div class="col-md-6 product-ofer">Topics: Java</div>
+              <div class="col-md-6 product-ofer">Topics: Python</div>
               <div class="col-md-6 product-ofer">Duration: 5 min</div>
             </div>
             <div class="col-md-6 row center-xs relative">
