--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </article>
         <article class="col-md-4">
           <div>
-            <img class="card" src="/overflow/img/php1.jpg" alt="ofer-3">
+            <img class="card" src="/overflow/img/java.jpg" alt="ofer-3">
             <p class="description row">
               <a href="#" class="col-xs-12">The importance of Java</a>
               <a href="#" class="col-xs-12">Free</a>
@@ -53,7 +53,7 @@
 
         <article class="col-md-4">
           <div>
-            <img class="card" src="/overflow/img/php1.jpg" alt="ofer-3">
+            <img class="card" src="/overflow/img/python2.jpg" alt="ofer-3">
             <p class="description row">
               <a href="#" class="col-xs-12">What is Python?</a>
               <a href="#" class="col-xs-12">Free</a>
