--- a/detalle_ruby.html
+++ b/detalle_ruby.html
@@ -51,7 +51,7 @@ Coming soon, this course will teach the basic usability and functionality about 
               <div class="col-md-6 product-ofer">Author: -</div>
               <div class="col-md-6 product-ofer">Company: OverFlowers</div>
               <div class="col-md-6 product-ofer">Topics: Models, Views, Controllers, Templates, etc.</div>
-              <div class="col-md-6 product-ofer">Duration: 20 min</div>
+              <div class="col-md-6 product-ofer">Duration: -</div>
             </div>
             <div class="col-md-6 row center-xs relative">
               <div class="col-md-11 product-price row shadow ">
