--- a/paths/index.html
+++ b/paths/index.html
@@ -35,7 +35,7 @@
             <img class="card" src="/overflow/img/front.png" alt="ofer-1">
             <p class="description row">
               <a href="#" class="col-xs-12">Frontend</a>
-              <a class="btn btn-prom btn-anim" href="/overflow/frontend">MORE</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/paths/frontend">MORE</a>
             </p>
           </div>
         </article>
@@ -44,7 +44,7 @@
             <img class="card" src="/overflow/img/art.png" alt="ofer-3">
             <p class="description row">
               <a href="#" class="col-xs-12">Articles</a>
-              <a class="btn btn-prom btn-anim" href="/overflow/articles">MORE</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/paths/articles">MORE</a>
             </p>
           </div>
         </article>
@@ -54,7 +54,7 @@
             <img class="card" src="/overflow/img/back.png" alt="ofer-6">
             <p class="description row">
               <a href="#" class="col-xs-12">Backend</a>
-              <a class="btn btn-prom btn-anim" href="/overflow/backend">MORE</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/paths/backend">MORE</a>
             </p>
           </div>
         </article>
