--- a/courses/index.html
+++ b/courses/index.html
@@ -36,7 +36,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Firebase</a>
               <a href="#" class="col-xs-12">Free</a>
-              <a class="btn btn-prom btn-anim" href="detalle_firebase.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/detalle_firebase.html">DETAILS</a>
             </p>
           </div>
         </article>
@@ -46,7 +46,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">The importance of Java</a>
               <a href="#" class="col-xs-12">Free</a>
-              <a class="btn btn-prom btn-anim" href="detalle_java.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/detalle_java.html">DETAILS</a>
             </p>
           </div>
         </article>
@@ -57,7 +57,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">What is Python?</a>
               <a href="#" class="col-xs-12">Free</a>
-              <a class="btn btn-prom btn-anim" href="detalle_python.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/detalle_python.html">DETAILS</a>
             </p>
           </div>
         </article>
@@ -67,7 +67,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Ruby on Rails</a>
               <a href="#" class="col-xs-12">Coming Soon</a>
-              <a class="btn btn-prom btn-anim" href="detalle_ruby.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/detalle_ruby.html">DETAILS</a>
             </p>
           </div>
         </article>
