--- a/detalle_java.html
+++ b/detalle_java.html
@@ -44,7 +44,7 @@ Nevertheless, as there are great positive characteristics that makes Java unique
 Download the article to get a more detailed view about the characteristics and the downsides about this programming language.
             </p>
           </div>
-          <img src="/overflow/img/php1.jpg"  class="col-md-6 product-img" alt="">
+          <img src="/overflow/img/java.jpg"  class="col-md-6 product-img" alt="">
           <div class="col-xs-12 row product-extra">
             <div class="col-md-6 row product-props">
               <div class="col-md-6 product-ofer">Author: Carlos Sánchez</div>
