--- a/detalle_python.html
+++ b/detalle_python.html
@@ -44,7 +44,7 @@ It's one of the world's most popular programming languages and is commonly used 
 Download the article to get a more detailed information about the characteristics and the downsides about this programming language.
             </p>
           </div>
-          <img src="/overflow/img/php1.jpg"  class="col-md-6 product-img" alt="">
+          <img src="/overflow/img/python2.jpg"  class="col-md-6 product-img" alt="">
           <div class="col-xs-12 row product-extra">
             <div class="col-md-6 row product-props">
               <div class="col-md-6 product-ofer">Author: Jesús Morales</div>
