--- a/paths/frontend/index.html
+++ b/paths/frontend/index.html
@@ -29,7 +29,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Firebase</a>
               <a href="#" class="col-xs-12">Free</a>
-              <a class="btn btn-prom btn-anim" href="detalle_firebase.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/detalle_firebase.html">DETAILS</a>
             </p>
           </div>
         </article>
