--- a/paths/backend/index.html
+++ b/paths/backend/index.html
@@ -40,7 +40,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">Ruby on Rails</a>
               <a href="#" class="col-xs-12">Free</a>
-              <a class="btn btn-prom btn-anim" href="detalle_ruby.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/detalle_ruby.html">DETAILS</a>
             </p>
           </div>
         </article>
