--- a/paths/backend/index.html
+++ b/paths/backend/index.html
@@ -30,7 +30,7 @@
             <p class="description row">
               <a href="#" class="col-xs-12">What is Python?</a>
               <a href="#" class="col-xs-12">Free</a>
-              <a class="btn btn-prom btn-anim" href="detalle_python.html">DETAILS</a>
+              <a class="btn btn-prom btn-anim" href="/overflow/detalle_python.html">DETAILS</a>
             </p>
           </div>
         </article>
