--- a/paths/backend/index.html
+++ b/paths/backend/index.html
@@ -22,6 +22,12 @@
     </header>
 
     <main>
+      <section id="bann-title">
+        <img src="img/php1.jpg" alt="bg">
+        <article>
+          <h2 class="even-bigger">Backend</h2>
+        </article>
+      </section>
       <section id="ofertas" class="row">
 
         <article class="col-md-4">
