--- a/paths/backend/index.html
+++ b/paths/backend/index.html
@@ -23,7 +23,7 @@
 
     <main>
       <section id="bann-title">
-        <img src="img/php1.jpg" alt="bg">
+        <img src="/overflow/img/php1.jpg" alt="bg">
         <article>
           <h2 class="even-bigger">Backend</h2>
         </article>
